--- a/partypicasso/src/App.css
+++ b/partypicasso/src/App.css
@@ -3,7 +3,7 @@
     width: 100vw;
     background-color: #b3d1c0; 
     font-family: "Comic Sans MS", sans-serif;
-    color: #343a40;
+    color: #4f6780;
     text-align: center;
 }
 
